Bug 510555 - Moving cursor out of ImHex causes mouse cursor glitches
Summary: Moving cursor out of ImHex causes mouse cursor glitches
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.91
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 511061 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-13 07:56 UTC by Nicolas
Modified: 2025-11-12 20:03 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments
Grapgical glitch at cursor (494.81 KB, image/jpeg)
2025-10-13 17:45 UTC, Nicolas
Details
cursor-photo (61.98 KB, image/png)
2025-10-26 14:05 UTC, Błażej Szczygieł
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas 2025-10-13 07:56:17 UTC
SUMMARY
When using ImHex (v1.37.4) and moving the cursor out of the window, when the cursor is outside, graphical glitches appear on the mouse cursor


STEPS TO REPRODUCE
1. Move mouse into client area of ImHex
2. Move mouse to the left border to see the resize cursor
3. 

OBSERVED RESULT
Graphical glitch appears on the left side of the cursor 

EXPECTED RESULT
No glitches.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.91
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.16.8-arch3-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 32 GiB of RAM (31.0 GiB usable)
Graphics Processor 1: Mesa Intel® UHD Graphics 630
Graphics Processor 2: Mesa Intel® UHD Graphics 630
Manufacturer: LENOVO
Product Name: 20QVCTO1WW
System Version: ThinkPad X1 Extreme 2nd

ADDITIONAL INFORMATION
Comment 1 Nicolas 2025-10-13 08:03:32 UTC
The display is setup on a 3840x2160  resolution with 200% scaling
Comment 2 Akseli Lahtinen 2025-10-13 09:24:42 UTC
Can't repro, I tried both flatpak and fedora package of ImHex. Only thing that happens is the mouse cursor changes it's look completely, but that seems to be the app taking over the cursor visuals.

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 3 Nicolas 2025-10-13 17:45:49 UTC
Created attachment 185737 [details]
Grapgical glitch at cursor

I have an external display with 100% scaling, there I dont see an issue, but on the display with 200% scaling I can reproduce it 1 out of three times.

Recording the video with spectacle does not show the issue, therefore I attached a photo taken from the display
Comment 4 Bug Janitor Service 2025-10-17 10:05:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8264
Comment 5 Zamundaaa 2025-10-17 12:06:57 UTC
Git commit 705ca2b3e27fbedf81ee308f9b7cf0f414ced76b by Xaver Hugl.
Committed on 17/10/2025 at 11:12.
Pushed by zamundaaa into branch 'master'.

scene/scene: more properly disable damage tracking for ItemTreeView

Seems like just using the aligned rect can still have issues sometimes; the
infiniteRegion() should be safer.

M  +2    -3    src/scene/scene.cpp

https://invent.kde.org/plasma/kwin/-/commit/705ca2b3e27fbedf81ee308f9b7cf0f414ced76b
Comment 6 Zamundaaa 2025-10-20 11:18:03 UTC
Git commit 6360626814e8bf4c4db6f2fb742275c73455d60d by Xaver Hugl.
Committed on 20/10/2025 at 11:17.
Pushed by zamundaaa into branch 'Plasma/6.5'.

scene/scene: more properly disable damage tracking for ItemTreeView

Seems like just using the aligned rect can still have issues sometimes; the
infiniteRegion() should be safer.
(cherry picked from commit 705ca2b3e27fbedf81ee308f9b7cf0f414ced76b)

M  +2    -3    src/scene/scene.cpp

https://invent.kde.org/plasma/kwin/-/commit/6360626814e8bf4c4db6f2fb742275c73455d60d
Comment 7 Błażej Szczygieł 2025-10-26 14:03:32 UTC
This still happens in kwin-6.5.0-git-7e4600e5279ede12c8e6a1e4c09f5140c633c731
Comment 8 Błażej Szczygieł 2025-10-26 14:05:02 UTC
Created attachment 186190 [details]
cursor-photo
Comment 9 Nate Graham 2025-10-29 18:59:34 UTC
*** Bug 511061 has been marked as a duplicate of this bug. ***
Comment 10 Błażej Szczygieł 2025-10-29 20:47:13 UTC
I can see this issue moving cursor between Qt5 applications (which sets cursor with different style and lowres).
Comment 11 moichumoigaming 2025-10-29 21:18:43 UTC
Just updated to 6.5.1, and the issue is still present.
Comment 12 Nicolas 2025-10-30 08:08:44 UTC
Agreed, the bug is still present in 6.5.1
Comment 13 Błażej Szczygieł 2025-10-31 19:12:58 UTC
I noticed cursor in 6.5.0, 6.5.1 is less smooth when it's changing shape or some small animations are running on the screen. I can see it while moving cursor in web browser or in QtCreator where some widgets has hover animation. The overall cursor latency is still good.
Comment 14 Bug Janitor Service 2025-11-09 14:36:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8390
Comment 15 Zamundaaa 2025-11-12 15:56:30 UTC
Git commit 382e48b9124ce99b066427f23f3ad1e2d328278e by Xaver Hugl, on behalf of Błażej Szczygieł.
Committed on 12/11/2025 at 15:16.
Pushed by zamundaaa into branch 'Plasma/6.5'.

scene/scene: use infinite region to repaint entire ItemTreeView

M  +2    -1    src/scene/scene.cpp

https://invent.kde.org/plasma/kwin/-/commit/382e48b9124ce99b066427f23f3ad1e2d328278e