scene/scene: more properly disable damage tracking for ItemTreeView

Seems like just using the aligned rect can still have issues sometimes; the
infiniteRegion() should be safer.

BUG: 510555